<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@id/login_form">

    <!-- Login progress -->
    <LinearLayout android:id="@+id/login_status"
                  android:visibility="gone"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"/>
        <TextView
                android:id="@+id/login_status_message"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login_progress_signing_in" />
    </LinearLayout>

    <RelativeLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/splash_password"
                android:layout_below="@+id/splash_email"
                android:layout_alignLeft="@+id/splash_email"
                android:hint="@string/splash_et_pass"
                android:textColor="@color/dark_grey"
                android:width="250dp"
                android:shadowColor="#88000000"
                android:shadowDx="0"
                android:shadowDy="-1"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/splash_email"
                android:layout_below="@+id/splash_name"
                android:layout_alignLeft="@+id/splash_name"
                android:hint="@string/splash_et_email"
                android:textColor="@color/dark_grey"
                android:width="250dp"
                android:shadowColor="#88000000"
                android:shadowDx="0"
                android:shadowDy="-1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/button_login"
                android:layout_below="@+id/splash_password"
                android:shadowColor="#88000000"
                android:shadowDx="0"
                android:shadowDy="-1"
                android:layout_centerHorizontal="true"
                android:textColor="@color/dark_grey"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/website"
                android:id="@+id/textView3"
                android:textStyle="italic"
                android:textSize="15dp"
                android:background="#00ffffff"
                android:textColor="@color/dark_grey"
                android:shadowColor="#88000000"
                android:shadowDx="0"
                android:shadowDy="-1"
                android:layout_below="@+id/button_login"
                android:layout_centerHorizontal="true"
                android:onClick="webClick"
                android:layout_marginTop="10dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/splash_name"
                android:hint="@string/splash_et_name"
                android:textColor="@color/dark_grey"
                android:width="250dp"
                android:shadowColor="#88000000"
                android:shadowDx="0"
                android:shadowDy="-1"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/splash_tv_title"
                android:id="@+id/splash_title"
                android:textStyle="italic"
                android:layout_marginBottom="70dp"
                android:layout_above="@+id/splash_name"
                android:layout_centerHorizontal="true"
                android:textSize="30dp"
                android:textColor="@color/light_grey"
                android:shadowColor="#88000000"
                android:shadowDx="0"
                android:shadowDy="-1"
                android:shadowRadius="0.1"
                android:singleLine="true"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:id="@+id/button_forgot"
                android:textStyle="italic"
                android:textSize="15dp"
                android:background="#00ffffff"
                android:textColor="@color/dark_grey"
                android:shadowColor="#88000000"
                android:shadowDx="0"
                android:shadowDy="-1"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>